Upgrade Liferay to 2025.q2.2